--- a/kubernetes-networks/canary/04-web-ingress-default.yaml
+++ b/kubernetes-networks/canary/04-web-ingress-default.yaml
@@ -2,10 +2,9 @@ apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: web
-  namespace: canary
+  namespace: default
   annotations:
-    nginx.ingress.kubernetes.io/canary: "true"
-    nginx.ingress.kubernetes.io/canary-by-header: x-canary
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
   - host: canary
