Default if no secret is given

--- a/kubernetes-templating/hipster-shop/templates/secret.yaml
+++ b/kubernetes-templating/hipster-shop/templates/secret.yaml
@@ -4,4 +4,4 @@ metadata:
   name: secret
 type: Opaque
 data:
-  visibleKey: {{ .Values.visibleKey | b64enc | quote }}
+  visibleKey: {{ .Values.visibleKey | default "" | b64enc | quote }}
